[project]
name = "ai-colmap-camera-tracking"
version = "0.2.2"
description = "Automated camera tracking pipeline using COLMAP, with undistortion and Houdini scene export."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "chordee", email = "chordee@gmail.com" }]
dependencies = [
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "tqdm>=4.67.1",
    "piexif>=1.1.3",
    "pyside6>=6.7",
]

[project.urls]
Repository = "https://github.com/chordee/colmap-camera-tracking"
